--- a/WindWaveMainPage/style.css
+++ b/WindWaveMainPage/style.css
@@ -37,7 +37,7 @@ p {
   to {transform: rotate(360deg);}
 }
 
-#partymode {
+#WindWaveMainPage {
   display: none;
   text-shadow: 2px 2px red,
                4px 4px orange,
@@ -50,7 +50,7 @@ p {
   font-size: 2rem;
 }
 
-#partymode hr {
+#WindWaveMainPage hr {
   /* height: 20px; */
   border-bottom: 20px dotted cyan;
   border-top: 0;
@@ -73,7 +73,7 @@ audio {
   margin: 10rem auto;
 }
 
-#partymode h1, #partymode h2 {
+#WindWaveDetailPage h1, #WindWaveDetailPage h2 {
   font-size: 6rem;
   text-align: center;
   
@@ -85,7 +85,7 @@ audio {
                10px 10px blue;
 }
 
-#partymode h2 {
+#WindWaveDetailPage h2 {
   font-size: 2.5rem;
 }
 
@@ -96,10 +96,10 @@ audio {
   width: 100%;
   height: 100vh;
   z-index: -1;
-  background-color: hsl(0, 100%, 70%);
+  background-color: hsl(211, 86%, 51%);
   font-size: 3rem;
   filter: hue-rotate(0deg);
-  animation: colorchange 3s infinite linear;
+  animation: colorchange 15s infinite linear;
 }
 
 .party-img {
